--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,8 @@ tabulate==0.9.0
 tokenizers==0.10.3
 torch==2.3.0
 tqdm==4.66.4
-transformers==4.3.0
+transformers==4.30
+accelerate==0.24.0
 typer==0.12.3
 typing_extensions==4.11.0
 ujson==5.10.0
@@ -73,3 +74,4 @@ uvloop==0.19.0
 watchfiles==0.21.0
 wcwidth==0.2.5
 websockets==12.0
+accelerate==0.24.0
