--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,69 @@
-adabelief-pytorch==0.2.0
-annotated-types==0.6.0
-anyio==4.3.0
-attrs==20.3.0
-Babel==2.9.1
-certifi==2024.2.2
-cffi==1.14.5
-chardet==4.0.0
-click==8.1.7
-colorama==0.4.4
-cryptography==36.0.1
-dnspython==2.6.1
-docutils==0.16
-email_validator==2.1.1
-fastapi==0.111.0
-fastapi-cli==0.0.3
-filelock==3.14.0
-fsspec==2024.5.0
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==2.10
-Jinja2==2.11.3
-jmespath==0.10.0
-joblib==1.4.2
-jsonschema==3.2.0
-markdown-it-py==3.0.0
-MarkupSafe==1.1.1
-mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.4
-oauthlib==3.0.2
-orjson==3.10.3
-packaging==21.3
-pip==21.3.1
-ply==3.11
-prompt-toolkit==3.0.24
-pycparser==2.20
-pydantic==2.7.1
-pydantic_core==2.18.2
-Pygments==2.18.0
-pyparsing==3.1.2
-pyrsistent==0.17.3
-PySocks==1.7.1
-python-dateutil==2.8.1
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2022.7.1
-PyYAML==5.4.1
-regex==2024.5.15
-requests==2.25.1
-rich==13.7.1
-sacremoses==0.1.1
-setuptools==59.6.0
-shellingham==1.5.4
-six==1.15.0
-sniffio==1.3.1
-starlette==0.37.2
-sympy==1.12
-tabulate==0.9.0
-tokenizers==0.13.3
-torch==2.3.0
-tqdm==4.66.4
-transformers==4.30
-accelerate==0.24.0
-typer==0.12.3
-typing_extensions==4.11.0
-ujson==5.10.0
-urllib3==1.25.10
-uvicorn==0.29.0
-uvloop==0.19.0
-watchfiles==0.21.0
-wcwidth==0.2.5
-websockets==12.0
-accelerate==0.24.0
+optimum
+accelerate
+aiohttp
+aiosignal
+annotated
+anyio
+attrs
+certifi
+charset
+click
+colorama
+datasets
+dill
+dnspython
+email_validator
+fastapi
+fastapi
+filelock
+frozenlist
+fsspec
+h11
+httpcore
+httptools
+httpx
+huggingface
+idna
+Jinja2
+markdown
+MarkupSafe
+mdurl
+mpmath
+multidict
+multiprocess
+numpy
+orjson
+packaging
+pandas
+pip
+psutil
+pyarrow
+pydantic
+pydantic_core
+Pygments
+pytz
+PyYAML
+regex
+requests
+rich
+safetensors
+setuptools
+shellingham
+six
+sniffio
+starlette
+sympy
+tokenizers
+torch
+tqdm
+transformers
+typer
+typing_extensions
+tzdata
+ujson
+urllib3
+uvicorn
+watchfiles
+websockets
+xxhash
+yarl
